# ros-data-types

./: .gitignore  CMakeLists.txt  README.md
cmake/: cyclone_idlc_generate.cmake
idl/_utilities/idl_all/: ros2_foxy.idl
idl/action_msgs/msg/: GoalInfo.idl  GoalStatus.idl  GoalStatusArray.idl
idl/action_msgs/srv/: CancelGoal_Request.idl  CancelGoal_Response.idl
idl/action_tutorials_interfaces/action/: Fibonacci_Feedback.idl  Fibonacci_FeedbackMessage.idl  Fibonacci_GetResult_Request.idl  Fibonacci_GetResult_Response.idl  Fibonacci_Goal.idl  Fibonacci_Result.idl  Fibonacci_SendGoal_Request.idl  Fibonacci_SendGoal_Response.idl
idl/actionlib_msgs/msg/: GoalID.idl  GoalStatus.idl  GoalStatusArray.idl
idl/builtin_interfaces/: CMakeLists.txt
idl/builtin_interfaces/msg/: Duration.idl  Time.idl
idl/composition_interfaces/srv/: ListNodes_Request.idl  ListNodes_Response.idl  LoadNode_Request.idl  LoadNode_Response.idl  UnloadNode_Request.idl  UnloadNode_Response.idl
idl/diagnostic_msgs/msg/: DiagnosticArray.idl  DiagnosticStatus.idl  KeyValue.idl
idl/diagnostic_msgs/srv/: AddDiagnostics_Request.idl  AddDiagnostics_Response.idl  SelfTest_Request.idl  SelfTest_Response.idl
idl/example_interfaces/action/: Fibonacci_Feedback.idl  Fibonacci_FeedbackMessage.idl  Fibonacci_GetResult_Request.idl  Fibonacci_GetResult_Response.idl  Fibonacci_Goal.idl  Fibonacci_Result.idl  Fibonacci_SendGoal_Request.idl  Fibonacci_SendGoal_Response.idl
idl/example_interfaces/msg/: Bool.idl  Byte.idl  ByteMultiArray.idl  Char.idl  Empty.idl  Float32.idl  Float32MultiArray.idl  Float64.idl  Float64MultiArray.idl  Int16.idl  Int16MultiArray.idl  Int32.idl  Int32MultiArray.idl  Int64.idl  Int64MultiArray.idl  Int8.idl  Int8MultiArray.idl  MultiArrayDimension.idl  MultiArrayLayout.idl  String.idl  UInt16.idl  UInt16MultiArray.idl  UInt32.idl  UInt32MultiArray.idl  UInt64.idl  UInt64MultiArray.idl  UInt8.idl  UInt8MultiArray.idl  WString.idl
idl/example_interfaces/srv/: AddTwoInts_Request.idl  AddTwoInts_Response.idl  SetBool_Request.idl  SetBool_Response.idl  Trigger_Request.idl  Trigger_Response.idl
idl/geometry_msgs/: CMakeLists.txt
idl/geometry_msgs/msg/: Accel.idl  AccelStamped.idl  AccelWithCovariance.idl  AccelWithCovarianceStamped.idl  Inertia.idl  InertiaStamped.idl  Point.idl  Point32.idl  PointStamped.idl  Polygon.idl  PolygonStamped.idl  Pose.idl  Pose2D.idl  PoseArray.idl  PoseStamped.idl  PoseWithCovariance.idl  PoseWithCovarianceStamped.idl  Quaternion.idl  QuaternionStamped.idl  Transform.idl  TransformStamped.idl  Twist.idl  TwistStamped.idl  TwistWithCovariance.idl  TwistWithCovarianceStamped.idl  Vector3.idl  Vector3Stamped.idl  Wrench.idl  WrenchStamped.idl
idl/libstatistics_collector/msg/: DummyMessage.idl
idl/lifecycle_msgs/msg/: State.idl  Transition.idl  TransitionDescription.idl  TransitionEvent.idl
idl/lifecycle_msgs/srv/: ChangeState_Request.idl  ChangeState_Response.idl  GetAvailableStates_Request.idl  GetAvailableStates_Response.idl  GetAvailableTransitions_Request.idl  GetAvailableTransitions_Response.idl  GetState_Request.idl  GetState_Response.idl
idl/logging_demo/srv/: ConfigLogger_Request.idl  ConfigLogger_Response.idl
idl/map_msgs/msg/: OccupancyGridUpdate.idl  PointCloud2Update.idl  ProjectedMap.idl  ProjectedMapInfo.idl
idl/map_msgs/srv/: GetMapROI_Request.idl  GetMapROI_Response.idl  GetPointMapROI_Request.idl  GetPointMapROI_Response.idl  GetPointMap_Request.idl  GetPointMap_Response.idl  ProjectedMapsInfo_Request.idl  ProjectedMapsInfo_Response.idl  SaveMap_Request.idl  SaveMap_Response.idl  SetMapProjections_Request.idl  SetMapProjections_Response.idl
idl/move_base_msgs/action/: MoveBase_Feedback.idl  MoveBase_FeedbackMessage.idl  MoveBase_GetResult_Request.idl  MoveBase_GetResult_Response.idl  MoveBase_Goal.idl  MoveBase_Result.idl  MoveBase_SendGoal_Request.idl  MoveBase_SendGoal_Response.idl
idl/nav_msgs/msg/: GridCells.idl  MapMetaData.idl  OccupancyGrid.idl  Odometry.idl  Path.idl
idl/nav_msgs/srv/: GetMap_Request.idl  GetMap_Response.idl  GetPlan_Request.idl  GetPlan_Response.idl  SetMap_Request.idl  SetMap_Response.idl
idl/pendulum_msgs/msg/: JointCommand.idl  JointState.idl  RttestResults.idl
idl/rcl_interfaces/msg/: FloatingPointRange.idl  IntegerRange.idl  ListParametersResult.idl  Log.idl  Parameter.idl  ParameterDescriptor.idl  ParameterEvent.idl  ParameterEventDescriptors.idl  ParameterType.idl  ParameterValue.idl  SetParametersResult.idl
idl/rcl_interfaces/srv/: GetParameters_Request.idl  (+11 more)
idl/std_msgs/: CMakeLists.txt
idl/std_srvs/: CMakeLists.txt
(+183 files in other folders)
